--- a/services1.html
+++ b/services1.html
@@ -125,7 +125,7 @@
     <section class="service">
       <div class="layout reverse">
         <div class="image">
-          <img src="c:\Users\Emil\OneDrive\Рабочий стол\сюз\5.avif"Шопинг">
+          <img src="5.avif"Шопинг">
         </div>
         <div class="text">
           <h2>Шопинг</h2>
@@ -413,3 +413,4 @@
   </script>
 </body>
 </html>
+
