--- a/services1.html
+++ b/services1.html
@@ -205,7 +205,7 @@
     <section class="service">
   <div class="layout reverse">
     <div class="image">
-      <img src="c:\Users\Emil\OneDrive\Рабочий стол\сюз\6.avif" alt="Мобильная съёмка и контент">
+      <img src="6.avif" alt="Мобильная съёмка и контент">
     </div>
     <div class="text">
       <h2>МОБИЛЬНАЯ СЪЁМКА | КОНТЕНТ</h2>
@@ -413,5 +413,6 @@
   </script>
 </body>
 </html>
+
 
 
