--- a/services1.html
+++ b/services1.html
@@ -165,7 +165,7 @@
     <section class="service">
       <div class="layout">
         <div class="image">
-          <img src=""https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgSdYzJM2XrSnGssWIZkYgecH8NKeeWU2vnYwkW7Nh6LRCj4VJ_MRTNN3f71oO9AvUs3FjkB5sbCrj8OxZQRhHz-WjWbN3L4IbfF19rwZQb2fHzPF49CMLPChrESY7LGNtD-ke9fnHhISp4/s1600/zg6g6N1qc6wcxo1_500.png" alt="Консультация по стилю">
+           <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgSdYzJM2XrSnGssWIZkYgecH8NKeeWU2vnYwkW7Nh6LRCj4VJ_MRTNN3f71oO9AvUs3FjkB5sbCrj8OxZQRhHz-WjWbN3L4IbfF19rwZQb2fHzPF49CMLPChrESY7LGNtD-ke9fnHhISp4/s1600/zg6g6N1qc6wcxo1_500.png" alt="Консультация по стилю">
         </div>
         <div class="text">
          
@@ -413,6 +413,7 @@
   </script>
 </body>
 </html>
+
 
 
 
