--- a/psixolog.html
+++ b/psixolog.html
@@ -127,13 +127,13 @@
         </ul>
       </div>
       <div class="image">
-        <img src="c:\Users\Emil\OneDrive\Рабочий стол\сюз\2.avif" alt="Психологическая сессия">
+        <img src="2.avif" alt="Психологическая сессия">
       </div>
     </section>
 
     <section class="layout reverse">
       <div class="image">
-        <img src="c:\Users\Emil\OneDrive\Рабочий стол\сюз\3.avif" alt="Психология и имидж">
+        <img src="3.avif" alt="Психология и имидж">
       </div>
       <div class="text-card">
         <h1>Глубинная комплексная работа — психология и имидж</h1>
@@ -178,7 +178,7 @@
         <p><strong>Стоимость:</strong> от 80 000 ֏</p>
       </div>
       <div class="image">
-        <img src="c:\Users\Emil\OneDrive\Рабочий стол\сюз\4.avif" alt="Психология, имидж и контент">
+        <img src="4.avif" alt="Психология, имидж и контент">
       </div>
     </section>
   </main>
@@ -207,4 +207,5 @@
   </script>
 </body>
 </html>
+
 
