--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
   <script>
     const videos = [
-      "video/video1.mp4",
-      "video/video2.mp4",
-      "video/video3.mp4",
-      "video/video4.mp4",
-      "video/video5.mp4",
-      "video/video6.mp4",
+      "video1.mp4",
+      "video2.mp4",
+      "video3.mp4",
+      "video4.mp4",
+      "video5.mp4",
+      "video6.mp4",
     ];
 
     const videoEl = document.querySelector(".bg-video");
@@ -144,3 +144,4 @@
   </script>
 </body>
 </html>
+
