--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
   <script>
     const videos = [
-      "1.mp4",
-      "2.mp4",
-      "3.mp4",
-      "4.mp4",
-      "5.mp4",
-      "6.mp4",
+      "video1.MP4",
+      "video2.MP4",
+      "video3.MP4",
+      "video4.MP4",
+      "video5.MP4",
+      "video6.MP4",
     ];
 
     const videoEl = document.querySelector(".bg-video");
@@ -144,5 +144,6 @@
   </script>
 </body>
 </html>
+
 
 
