--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
   </footer>
 
   <script>
-    const videos = [
-      "video1.MP4",
-      "video2.MP4",
-      "video3.MP4",
-      "video4.MP4",
-      "video5.MP4",
-      "video6.MP4",
-    ];
+  const videos = [
+  "videos/video1.mp4",
+  "videos/video2.mp4",
+  "videos/video3.mp4",
+  "videos/video4.mp4",
+  "videos/video5.mp4",
+  "videos/video6.mp4",
+];
 
     const videoEl = document.querySelector(".bg-video");
     const randomVideo = videos[Math.floor(Math.random() * videos.length)];
@@ -144,6 +144,7 @@
   </script>
 </body>
 </html>
+
 
 
 
