--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <script>
   const videos = [
-  "videos/video1.mp4",
+  "videos/video1.MP4",
   "videos/video2.mp4",
   "videos/video3.mp4",
   "videos/video4.mp4",
@@ -144,6 +144,7 @@
   </script>
 </body>
 </html>
+
 
 
 
