--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
   </footer>
 
   <script>
-  const videos = [
-  "videos/video1.MP4",
+const videos = [
+  "videos/video1.mp4",
   "videos/video2.mp4",
   "videos/video3.mp4",
   "videos/video4.mp4",
@@ -138,12 +138,13 @@
   "videos/video6.mp4",
 ];
 
-    const videoEl = document.querySelector(".bg-video");
-    const randomVideo = videos[Math.floor(Math.random() * videos.length)];
-    videoEl.src = randomVideo;
-  </script>
+const videoEl = document.querySelector(".bg-video");
+const randomVideo = videos[Math.floor(Math.random() * videos.length)];
+videoEl.src = randomVideo;
+</script>
 </body>
 </html>
+
 
 
 
