--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
   <script>
 const videos = [
-  "/videos/video1.MP4",
-  "/videos/video2.MP4",
-  "/videos/video3.MP4",
-  "/videos/video4.MP4",
-  "/videos/video5.MP4",
-  "/videos/video6.MP4",
+  "/video/video1.MP4",
+  "/video/video2.MP4",
+  "/video/video3.MP4",
+  "/video/video4.MP4",
+  "/video/video5.MP4",
+  "/video/video6.MP4",
 ];
 
 const videoEl = document.querySelector(".bg-video");
@@ -161,6 +161,7 @@ trySet(idx);
 </script>
 </body>
 </html>
+
 
 
 
