--- a/services.html
+++ b/services.html
@@ -78,11 +78,12 @@
     <div class="content">
       <h1>Услуги</h1>
       <div class="services-list">
-        <a href="services1.html">Имидж и контент</a>
-        <a href="psixolog.html">Психология</a>
-        <a href="extra.html">Дополнительные</a>
+        <a href="services1.html">ИМИДЖ И КОНТЕНТ</a>
+        <a href="psixolog.html">ПСИХОЛОГИЯ</a>
+        <a href="extra.html">ДОПОЛНИТЕЛЬНА</a>
       </div>
     </div>
   </section>
 </body>
 </html>
+
