--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Услуги - SYUZAN MK</title>
+  <title>УСЛУГИ- SYUZAN MK</title>
   <link href="https://fonts.googleapis.com/css2?family=Monotype+Corsiva&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -195,7 +195,7 @@
       <div class="services-list">
         <a href="services1.html">ИМИДЖ И КОНТЕНТ</a>
         <a href="psixolog.html">ПСИХОЛОГИЯ</a>
-        <a href="extra.html">ДОПОЛНИТЕЛЬНА</a>
+        <a href="extra.html">ДОПОЛНИТЕЛЬНО</a>
       </div>
     </div>
   </section>
@@ -242,5 +242,6 @@
 })();
 </script>
 </html>
+
 
 
