--- a/services1.html
+++ b/services1.html
@@ -1,44 +1,97 @@
-<!DOCTYPE html>
+<!doctype html>  
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Сюзан Мкртчян — Услуги</title>
-<style>
-  :root {
-    --bg: #1B110E;
-    --btn-bg: linear-gradient(145deg, #ffffff, #e6e0dc);
-    --btn-hover: linear-gradient(145deg, #f5f0ed, #ffffff);
-    --btn-text: #1B110E;
-    --accent: #e9e2dd;
-  }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Сюзан Мкртчян — Услуги</title>
 
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+  <!-- Подключение шрифта Forum -->
+  <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
 
-  body {
-    font-family: 'Forum', serif; /* Forum для всего сайта */
-    background: var(--bg);
-    color: var(--accent);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow: hidden;
+  <style>
+    :root{
+      --bg: #3B2A24;
+      --white: #ffffff;
+      --text: #1a120e;
+      --accent: #e9e2dd;
+      --hover: #795548;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
+      font-family: 'Forum', serif;
+      color: var(--white);
+      background: var(--bg);
+      display:flex;
+      flex-direction: column;
+      min-height:100vh;
+    }
 
-    /* 🚫 добавь вот эти строки */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
+    main{ padding-top: 40px; }
 
-  a, button {
-    pointer-events: auto; /* оставляем кликабельность ссылкам и кнопкам */
-  }
+    .layout {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: clamp(16px, 3vw, 32px);
+      width: min(1200px, 100%);
+      margin: 0 auto;
+      padding: clamp(16px, 4vw, 48px);
+      align-items: stretch;
+    }
+    .layout.reverse { direction: rtl; }
+    .layout.reverse > * { direction: ltr; }
+
+    .text-card {
+      background: var(--white);
+      color: var(--text);
+      padding: clamp(18px, 3vw, 36px);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,.2);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+      font-size: 1.2em; /* збільшили базовий текст */
+    }
+    .text-card.visible { opacity: 1; transform: translateY(0); }
+
+    .text-card h1 { 
+      margin-bottom: .5em; 
+      font-size: clamp(32px, 4vw, 48px); /* збільшили заголовки */
+    }
+    .text-card h3 { 
+      margin-top: 1em; 
+      margin-bottom: .5em; 
+      font-size: 1.4em; /* збільшили підзаголовки */
+    }
+    .text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
+    .text-card ul li { 
+      margin-bottom: .5em; 
+      font-size: 1.15em; /* трохи більші елементи списку */
+    }
+
+    .image {
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      transform: scale(0.95);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+      overflow: hidden;
+    }
+    .image.visible { opacity: 1; transform: scale(1); }
+    .image img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease-out;
+      will-change: transform;
+    }
+
 
 
   main {
