--- a/services.html
+++ b/services.html
@@ -191,7 +191,7 @@
 <body>
   <section id="services">
     <div class="content">
-      <h1>Услуги</h1>
+      <h1>УСЛУГИ</h1>
       <div class="services-list">
         <a href="services1.html">ИМИДЖ И КОНТЕНТ</a>
         <a href="psixolog.html">ПСИХОЛОГИЯ</a>
@@ -242,6 +242,7 @@
 })();
 </script>
 </html>
+
 
 
 
