--- a/services1.html
+++ b/services1.html
@@ -1,4 +1,91 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Сюзан Мкртчян — Услуги</title>
 
+<!-- Подключение шрифта Forum -->
+<link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+
+<style>
+  :root {
+    --bg: #3B2A24;
+    --white: #ffffff;
+    --text: #1a120e;
+    --accent: #e9e2dd;
+    --hover: #795548;
+  }
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  html, body {
+    height: 100%;
+  }
+  body {
+    font-family: 'Forum', serif;
+    color: var(--white);
+    background: var(--bg);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    line-height: 1.6;
+  }
+
+  main {
+    padding: 40px 0;
+  }
+
+  /* Сетка для секций */
+  .layout {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    width: min(1200px, 100%);
+    margin: 0 auto 80px;
+    padding: 0 20px;
+  }
+  .layout.reverse {
+    flex-direction: row-reverse;
+  }
+
+  .image {
+    flex: 1;
+  }
+  .image img {
+    width: 100%;
+    height: auto;
+    max-height: 760px;
+    object-fit: cover;
+    border-radius: 17px;
+    display: block;
+  }
+
+  .text {
+    flex: 1;
+    font-size: 1.1rem;
+  }
+  .text h2 {
+    font-size: 2rem;
+    margin-bottom: 15px;
+  }
+  .text h4 {
+    margin-top: 20px;
+    font-size: 1.2rem;
+  }
+  .text ul {
+    padding-left: 20px;
+    margin: 10px 0;
+  }
+  .text ul li {
+    margin-bottom: 4px;
+  }
+</style>
+</head>
+<body>
+<main>
 
    <!-- 1 -->
     <section class="service">
