--- a/services1.html
+++ b/services1.html
@@ -126,7 +126,7 @@
     <section class="service">
       <div class="layout reverse">
         <div class="image">
-          <img src="5.avif"Шопинг">
+          <img src="5.avif""Шопинг">
         </div>
         <div class="text">
           <h2>Шопинг</h2>
@@ -414,6 +414,7 @@
   </script>
 </body>
 </html>
+
 
 
 
