--- a/psixolog.html
+++ b/psixolog.html
@@ -49,13 +49,8 @@
     /* На мобилке фото сверху, текст под ним */
     @media (max-width: 900px) {
       .layout { grid-template-columns: 1fr; }
-      .layout.reverse, .layout {
-        direction: ltr;
-      }
-      .layout.reverse > *, .layout > * {
-        display: flex;
-        flex-direction: column;
-      }
+      .layout.reverse, .layout { direction: ltr; }
+      .layout.reverse > *, .layout > * { display: flex; flex-direction: column; }
       .text-card { margin-top: 24px; }
       .image img { max-height: 70vh; width: auto; }
     }
@@ -115,11 +110,7 @@
     section:nth-of-type(3) .text-card { font-size: 1.3em; }
 
     /* Увеличение картинки только в 3-м блоке */
-    section:nth-of-type(3) .image img {
-      width: 110%;
-      height: auto;
-      max-width: none;
-    }
+    section:nth-of-type(3) .image img { width: 110%; height: auto; max-width: none; }
   </style>
 </head>
 <body>
@@ -218,6 +209,7 @@
   </script>
 </body>
 </html>
+
 
 
 
