--- a/psixolog.html
+++ b/psixolog.html
@@ -8,110 +8,129 @@
   <!-- Подключение шрифта Forum -->
   <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --bg: #3B2A24;
-      --white: #ffffff;
-      --text: #1a120e;
-      --accent: #e9e2dd;
-      --hover: #795548;
-    }
+<style>
+  :root {
+    --bg: #3B2A24;
+    --white: #ffffff;
+    --text: #1a120e;
+    --accent: #e9e2dd;
+    --hover: #795548;
+  }
 
-    * { box-sizing: border-box; margin:0; padding:0; }
-    html, body { height: 100%; }
-    body {
-      font-family: 'Forum', serif;
-      color: var(--white);
-      background: var(--bg);
+  * { box-sizing: border-box; margin:0; padding:0; }
+  html, body { height: 100%; }
+  body {
+    font-family: 'Forum', serif;
+    color: var(--white);
+    background: var(--bg);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  main { padding-top: 40px; }
+
+  .layout {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: clamp(16px, 3vw, 32px);
+    width: min(1200px, 100%);
+    margin: 0 auto 80px;
+    padding: clamp(16px, 4vw, 48px);
+    align-items: stretch;
+  }
+
+  /* Перевернутые блоки на ПК */
+  @media (min-width: 901px) {
+    .layout.reverse { direction: rtl; }
+    .layout.reverse > * { direction: ltr; }
+  }
+
+  .text-card {
+    background: var(--white);
+    color: var(--text);
+    padding: clamp(18px, 3vw, 36px);
+    border-radius: 16px;
+    box-shadow: 0 8px 20px rgba(0,0,0,.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+    font-size: 1.2em;
+  }
+  .text-card.visible { opacity: 1; transform: translateY(0); }
+
+  .text-card h1 { 
+    margin-bottom: .5em; 
+    font-size: clamp(32px, 4vw, 48px);
+  }
+  .text-card h3 { 
+    margin-top: 1em; 
+    margin-bottom: .5em; 
+    font-size: 1.4em;
+  }
+  .text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
+  .text-card ul li { 
+    margin-bottom: .5em; 
+    font-size: 1.15em;
+  }
+
+  .image {
+    border-radius: 16px;
+    box-shadow: 0 8px 20px rgba(0,0,0,.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transform: scale(0.95);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+    overflow: hidden;
+  }
+  .image.visible { opacity: 1; transform: scale(1); }
+  .image img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    transition: transform 0.3s ease-out;
+    will-change: transform;
+  }
+
+  /* Увеличенный текст и картинка только в 3-м блоке */
+  section:nth-of-type(3) .text-card { font-size: 1.3em; }
+  section:nth-of-type(3) .image img {
+    width: 110%;
+    height: auto;
+    max-width: none;
+  }
+
+  /* --- Адаптив для планшетов --- */
+  @media (max-width: 900px) {
+    .layout { grid-template-columns: 1fr; direction: ltr; }
+    .layout.reverse, .layout { direction: ltr; }
+    .layout.reverse > *, .layout > * {
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
     }
+    .text-card { margin-top: 24px; font-size: 1.1em; }
+    .image img { max-height: 60vh; width: 100%; }
+    .text-card h1 { font-size: 2rem; }
+    .text-card h3 { font-size: 1.2rem; }
+    .text-card ul li { font-size: 1rem; }
+  }
 
-    main { padding-top: 40px; }
+  /* --- Адаптив для мобильных экранов --- */
+  @media (max-width: 480px) {
+    .layout { padding: 10px; gap: 10px; }
+    .text-card { font-size: 1em; padding: 12px; }
+    .text-card h1 { font-size: 1.6em; }
+    .text-card h3 { font-size: 1.1em; }
+    .text-card ul li { font-size: 1em; }
+    .image img { max-height: 50vh; width: 100%; }
+  }
+</style>
 
-    .layout {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: clamp(16px, 3vw, 32px);
-      width: min(1200px, 100%);
-      margin: 0 auto 80px;
-      padding: clamp(16px, 4vw, 48px);
-      align-items: stretch;
-    }
-
-    /* Перевернутые блоки на ПК */
-    @media (min-width: 901px) {
-      .layout.reverse { direction: rtl; }
-      .layout.reverse > * { direction: ltr; }
-    }
-
-    /* На мобилке фото сверху, текст под ним */
-    @media (max-width: 900px) {
-      .layout { grid-template-columns: 1fr; }
-      .layout.reverse, .layout { direction: ltr; }
-      .layout.reverse > *, .layout > * { display: flex; flex-direction: column; }
-      .text-card { margin-top: 24px; }
-      .image img { max-height: 70vh; width: auto; }
-    }
-
-    .text-card {
-      background: var(--white);
-      color: var(--text);
-      padding: clamp(18px, 3vw, 36px);
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,.2);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-      font-size: 1.2em;
-    }
-    .text-card.visible { opacity: 1; transform: translateY(0); }
-
-    .text-card h1 { 
-      margin-bottom: .5em; 
-      font-size: clamp(32px, 4vw, 48px);
-    }
-    .text-card h3 { 
-      margin-top: 1em; 
-      margin-bottom: .5em; 
-      font-size: 1.4em;
-    }
-    .text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
-    .text-card ul li { 
-      margin-bottom: .5em; 
-      font-size: 1.15em;
-    }
-
-    .image {
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,.2);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      opacity: 0;
-      transform: scale(0.95);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-      overflow: hidden;
-    }
-    .image.visible { opacity: 1; transform: scale(1); }
-    .image img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      transition: transform 0.3s ease-out;
-      will-change: transform;
-    }
-
-    /* Увеличенный текст только в 3-м блоке */
-    section:nth-of-type(3) .text-card { font-size: 1.3em; }
-
-    /* Увеличение картинки только в 3-м блоке */
-    section:nth-of-type(3) .image img { width: 110%; height: auto; max-width: none; }
-  </style>
 </head>
 <body>
   <main>
@@ -209,6 +228,7 @@
   </script>
 </body>
 </html>
+
 
 
 
