--- a/psixolog.html
+++ b/psixolog.html
@@ -7,119 +7,120 @@
 
   <!-- Подключение шрифта Forum -->
   <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
-<style>
-<style>
-  :root {
-    --bg: #3B2A24;
-    --white: #ffffff;
-    --text: #1a120e;
-    --accent: #e9e2dd;
-    --hover: #795548;
-  }
 
-  * { box-sizing: border-box; margin:0; padding:0; }
-  html, body { height: 100%; }
-  body {
-    font-family: 'Forum', serif;
-    color: var(--white);
-    background: var(--bg);
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+  <style>
+    :root {
+      --bg: #3B2A24;
+      --white: #ffffff;
+      --text: #1a120e;
+      --accent: #e9e2dd;
+      --hover: #795548;
+    }
 
-  main { padding-top: 40px; }
+    * { box-sizing: border-box; margin:0; padding:0; }
+    html, body { height: 100%; }
+    body {
+      font-family: 'Forum', serif;
+      color: var(--white);
+      background: var(--bg);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
 
-  /* --- Сетки блоков --- */
-  .layout {
-    display: flex;
-    flex-direction: column; /* картинка сверху */
-    gap: clamp(16px, 3vw, 32px);
-    width: min(1200px, 100%);
-    margin: 0 auto 80px;
-    padding: clamp(16px, 4vw, 48px);
-    align-items: center;
-  }
+    main { padding-top: 40px; }
 
-  .text-card {
-    background: var(--white);
-    color: var(--text);
-    padding: clamp(18px, 3vw, 36px);
-    border-radius: 16px;
-    box-shadow: 0 8px 20px rgba(0,0,0,.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    opacity: 0;
-    transform: translateY(30px);
-    transition: opacity 0.8s ease, transform 0.8s ease;
-    font-size: 1.2em;
-    width: 100%;
-    max-width: 700px;
-  }
-  .text-card.visible { opacity: 1; transform: translateY(0); }
+    .layout {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: clamp(16px, 3vw, 32px);
+      width: min(1200px, 100%);
+      margin: 0 auto 80px;
+      padding: clamp(16px, 4vw, 48px);
+      align-items: stretch;
+    }
 
-  .text-card h1 { 
-    margin-bottom: .5em; 
-    font-size: clamp(32px, 4vw, 48px);
-  }
-  .text-card h3 { 
-    margin-top: 1em; 
-    margin-bottom: .5em; 
-    font-size: 1.4em;
-  }
-  .text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
-  .text-card ul li { 
-    margin-bottom: .5em; 
-    font-size: 1.15em;
-  }
+    /* Перевернутые блоки на ПК */
+    @media (min-width: 901px) {
+      .layout.reverse { direction: rtl; }
+      .layout.reverse > * { direction: ltr; }
+    }
 
-  .image {
-    border-radius: 16px;
-    box-shadow: 0 8px 20px rgba(0,0,0,.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transform: scale(0.98);
-    transition: opacity 0.8s ease, transform 0.8s ease;
-    overflow: hidden;
-    width: 100%;
-  }
-  .image.visible { opacity: 1; transform: scale(1); }
+    /* На мобилке фото сверху, текст под ним */
+    @media (max-width: 900px) {
+      .layout { grid-template-columns: 1fr; }
+      .layout.reverse, .layout {
+        direction: ltr;
+      }
+      .layout.reverse > *, .layout > * {
+        display: flex;
+        flex-direction: column;
+      }
+      .text-card { margin-top: 24px; }
+      .image img { max-height: 70vh; width: auto; }
+    }
 
-  .image img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    transition: transform 0.3s ease-out;
-    will-change: transform;
-  }
+    .text-card {
+      background: var(--white);
+      color: var(--text);
+      padding: clamp(18px, 3vw, 36px);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,.2);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+      font-size: 1.2em;
+    }
+    .text-card.visible { opacity: 1; transform: translateY(0); }
 
-  /* Увеличение картинок: первая чуть больше, вторая и третья заметно */
-  section:nth-of-type(1) .image img { width: 105%; }
-  section:nth-of-type(2) .image img { width: 110%; }
-  section:nth-of-type(3) .image img { width: 110%; }
+    .text-card h1 { 
+      margin-bottom: .5em; 
+      font-size: clamp(32px, 4vw, 48px);
+    }
+    .text-card h3 { 
+      margin-top: 1em; 
+      margin-bottom: .5em; 
+      font-size: 1.4em;
+    }
+    .text-card ul { margin-left: 1.2em; margin-bottom: 1em; }
+    .text-card ul li { 
+      margin-bottom: .5em; 
+      font-size: 1.15em;
+    }
 
-  /* --- Адаптив для планшетов --- */
-  @media (max-width: 900px) {
-    .text-card { font-size: 1.1em; padding: 18px; }
-    .text-card h1 { font-size: 2rem; }
-    .text-card h3 { font-size: 1.2rem; }
-    .text-card ul li { font-size: 1rem; }
-    .image img { width: 100%; max-height: 60vh; }
-  }
+    .image {
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      transform: scale(0.95);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+      overflow: hidden;
+    }
+    .image.visible { opacity: 1; transform: scale(1); }
+    .image img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease-out;
+      will-change: transform;
+    }
 
-  /* --- Адаптив для мобильных экранов --- */
-  @media (max-width: 480px) {
-    .layout { padding: 10px; gap: 10px; }
-    .text-card { font-size: 1em; padding: 12px; }
-    .text-card h1 { font-size: 1.5em; }
-    .text-card h3 { font-size: 1.05em; }
-    .text-card ul li { font-size: 0.95em; }
-    .image img { max-height: 50vh; width: 100%; }
-  }
-</style>
+    /* Увеличенный текст только в 3-м блоке */
+    section:nth-of-type(3) .text-card { font-size: 1.3em; }
+
+    /* Увеличение картинки только в 3-м блоке */
+    section:nth-of-type(3) .image img {
+      width: 110%;
+      height: auto;
+      max-width: none;
+    }
+  </style>
 </head>
 <body>
   <main>
@@ -217,6 +218,10 @@
   </script>
 </body>
 </html>
+
+
+
+
 
 
 
